fix: align modals in according to switching between single / multiple test cases, remove duplicated component

--- a/app/src/pages/inside/testCaseLibraryPage/addToLaunchModal/addToLaunchModal.scss
+++ b/app/src/pages/inside/testCaseLibraryPage/addToLaunchModal/addToLaunchModal.scss
@@ -1,5 +1,5 @@
 /*
- * Copyright 2025 EPAM Systems
+ * Copyright 2026 EPAM Systems
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,34 +14,13 @@
  * limitations under the License.
  */
 
+.add-to-launch-modal {
+  &__content-wrapper {
+    position: relative;
+  }
+}
+
 .selected-test-cases {
-  font-family: $FONT-ROBOTO-BOLD;
-}
-
-.autocomplete-wrapper {
-  position: relative;
-  margin-bottom: 16px;
-}
-
-.launch-name-wrapper {
-  margin: 16px 0 4px;
-}
-
-.launch-name-hint {
-  color: var(--rp-ui-base-e-400);
-  font-size: 11px;
-  line-height: 16px;
-  font-weight: 400;
-  margin-bottom: 16px;
-
-  &-link {
-    color: var(--rp-ui-base-dark-topaz-main);
-    text-decoration: none;
-  }
-}
-
-.launch-description {
-  &-wrapper {
-    margin: 16px 0;
-  }
+  font-family: var(--rp-ui-base-font-family);
+  font-weight: var(--rp-ui-base-fw-bold);
 }
